# igb_sdk

./: .gitignore
igb_daisy/: CMakeLists.txt
igb_daisy/periph/: audio_pcm3060.hpp  gpio.hpp  i2c.hpp  sdram.hpp  spi.hpp
igb_gd32/: base.hpp
igb_gd32/base/: _info.hpp  cmsis.hpp  common.hpp  define.hpp  device.hpp  mcu.hpp
igb_gd32/periph/: adc.hpp  dac.hpp  dma.hpp  exti.hpp  fast_gpio.hpp  flash.hpp  gpio.hpp  i2c.hpp  nvic.hpp  rcc.hpp  spi.hpp  syscfg.hpp  systick.cpp  systick.hpp  tim.hpp  tsc.hpp  usart.hpp
igb_sdk/: CMakeLists.txt  base.hpp  seq.hpp  ui.hpp
igb_sdk/base/: version.hpp
igb_sdk/device/: dac8554_spi.hpp  dac8568_spi.hpp  ext_mem_accessor.hpp  fram_mb85r_spi.hpp  fram_mb85rc04_i2c.hpp  is31fl3731_i2c.hpp  is31fl3731_i2c_master.hpp  mcp33151_spi.hpp  multiplexed_adc.hpp  oled_ssd1306.hpp  pcm3060.hpp  sd_async_reader.hpp  sd_async_writer.hpp  (+2 more)
igb_stm32/: CMakeLists.txt  base.hpp  hal.hpp  periph.hpp
igb_util/: CMakeLists.txt  _dsp_tbl_func_1024.hpp  _dsp_tbl_func_256.hpp  accessor.hpp  algorithm.hpp  biquad_filter.hpp  bitmagic.hpp  cast.hpp  container.hpp  conversion.hpp  cycle_speed.cpp  cycle_speed.hpp  delay_line.hpp  digi_tape.hpp  dsp_func.hpp  dsp_tbl_func.cpp  dsp_tbl_func.hpp  dsp_tbl_func_gen.rb  dynamic_reg.hpp  for_each.hpp  interpolator.hpp  knob_mode.hpp  macro.hpp  math.hpp  noise.hpp  null_functor.hpp  overload.hpp  pitch_shifter.hpp  random.cpp  random.hpp  reg.hpp  ring_buf.hpp  serialize_func.hpp  serializer.hpp  smoother.hpp  tbl.cpp  tbl.hpp  value_stabilizer.hpp
test/igb_sdk/: CMakeLists.txt  do_test.sh
test/igb_sdk/src/: test_button_history.cpp  test_midi_parser.cpp  test_quantizer.cpp  test_soft_timer.cpp  test_syncable_mod_clock.cpp
(+129 files in other folders)
